k8s/mongodb-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-h
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
  clusterIP: None
