k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp
  type: ClusterIP
  ports:
    - name: nodeapp-service-port
      port: 80
      targetPort: 4000
      protocol: TCP
