k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  labels:
    name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: sandrosantos.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nodeapp-service
                port:
                  number: 80
      tls:
        - hosts:
            - "ingress.sandrosantos.dev"
          secretName: letsencrypt-tls
